# File-Compression-Integrity-Logger

./: CMakeLists.txt  README.md
src/: FileCompressor.cpp  FileCompressor.h  FileDecompressor.cpp  FileDecompressor.h  IntegrityChecker.cpp  IntegrityChecker.h  Logger.cpp  Logger.h  main.cpp
